crates/musli-tests/tests/ui/private_fn_error.stderr
error[E0603]: function `decode` is private
  --> tests/ui/private_fn_error.rs:5:26
   |
5  |     #[musli(with = self::array::<_, 4>)]
   |                          ^^^^^ private function
   |
note: the function `decode` is defined here
  --> tests/ui/private_fn_error.rs:22:5
   |
22 | /     fn decode<'de, M, C, D, T, const N: usize>(cx: &mut C, decoder: D) -> Result<[T; N], C::Error>
23 | |     where
24 | |         M: Mode,
25 | |         C: Context<Input = D::Error>,
...  |
28 | |         todo!()
29 | |     }
   | |_____^
